@@ -1,5 +1,15 @@
 2009-07-18  Miloslav Trmač  <mitr@redhat.com>
 
+	* src/client.py (ClientsConnection.send_inner)
+	(ClientsConnection.read_payload)
+	(ClientsConnection.write_payload_to_file)
+	(ClientsConnection.__read_header)
+	* src/server.py (ServersConnection.read_request)
+	(ServersConnection.__send_payload)
+	(ServersConnection.send_reply_header): Use M2Crypto.EVP.HMAC instead of
+	Python's hmac, which uses incorrect block size in RHEL5.
+	* src/utils.py (M2CryptoSHA512DigestMod): Remove.
+
 	* src/utils.py (nss_init._password_callback): Be compatible with both
 	python-nss 0.1 and 0.4.
 
